--- a/index.html
+++ b/index.html
@@ -1,166 +1,177 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name='description' content='Итоговое задание первого спринта'>
-  <meta name="keywords" content="html, css">
-  <meta name="author" content="Катя Иванова">
-  <link href="./styles/normalize.css" rel="stylesheet" >
-  <link href="./styles/style.css" rel="stylesheet" >
-  <title>Научиться учиться</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='description' content='Итоговое задание первого спринта'>
+    <meta name="keywords" content="html, css">
+    <meta name="author" content="Катя Иванова">
+    <link href="./styles/normalize.css" rel="stylesheet">
+    <link href="./styles/style.css" rel="stylesheet">
+    <title>Научиться учиться</title>
 </head>
-<body >
-  <div class="page">
-     <header class="header">
-      <div class="logo logo_place_header"></div>
-      <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link"> Узнать &rarr;</a></p>
-      <div class="header__main-illustration"></div>
-      <div class="header__square-pic"></div>
-    </header>
-    <main class="content">
-      <section class="description">
-        <div class="two-columns">
-        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-        <div class="two-columns__main-text">
-        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
-          Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
-           Зубрежка быстро выветривается и не приносит пользы.</p>
-        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. 
-          Что с этим делать?</p>
-        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. 
-          Эти же техники применяются на примере обучения в Практикуме.</p>
-        </div>
-        </div>
-      </section>
 
-      <section class="digits">
-        <h3 class="section-title">Цифры и факты</h3>
-        <p class="section-subtitle">Про учёбу и мозг</p>
-        <ul class="table">
-        <li class="table_cell">
-        <h3 class="table_heading">86 миллиардов</h3>
-        <p class="table_text">Число нейронов в мозге человека</p></li>
-        <li class="table_cell ">
-        <h3 class="table_heading">2,1 миллиарда</h3>
-        <p class="table_text">Число нуждающихся в повышении квалификации</p>
-        <p class="table_text">Всемирный Банк, 2017</p>
-        </li>
-        <li class="table_cell">
-          <h3 class="table_heading">1000 терабайт</h3>
-        <p class="table_text">объём памяти человека</p>
-      </li>
-        <li class="table_cell">
-          <h3 class="table_heading">500 триллионов</h3>
-        <p class="table_text">Число ответственных за обучение нервных синапсисов у взрослого человека</p>
-      </li>
-        <li class="table_cell">
-          <h3 class="table_heading">420 миллионов</h3>
-        <p class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>  
-          <p class="table_text"> Всемирный банк, 2017</p>
-        </li>
-        <li class="table_cell">
-          <h3 class="table_heading">17-20 лет</h3>
-        <p class="table_text">Пик обучаемости</p>
-      </li>
-        <li class="table_cell">
-          <h3 class="table_heading">1885 год</h3>
-        <p class="table_text">Открытие кривой забывания</p>
-      </li>
-        <li class="table_cell">
-          <h3 class="table_heading">1889 год</h3>
-        <p class="table_text">Открытие условного рефлекса</p>
-      </li>
-        </ul>
-      </section>
 
-      <section class="feynman">
-        <h4 class="feynman_title">Метод Фейнмана</h4>
-        <p class="feynman_subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman_link">Подробнее &rarr;</a>
-      </section>
+<body>
+    <div class="page">
+        <header class="header">
+            <div class="logo logo__place_header"></div>
+            <h1 class="header__title">Научиться учиться</h1>
+            <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+                <a href="#" class="header__link"> Узнать &rarr;</a></p>
+            <div class="header__main-illustration"></div>
+            <div class="header__square-pic"></div>
+        </header>
+        <main class="content">
+            <section class="description">
+                <div class="two-columns">
+                    <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+                    <div class="two-columns__main-text">
+                        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального
+                            знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+                        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+                        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+                    </div>
+                </div>
+            </section>
 
-      <section class="kaufman">
-        <div class="kaufman_triangle"></div>
-        <div class="section-title_theme_dark section-title">Принципы обучения</div>
-        <p class="section-subtitle_theme_dark section-subtitle">от Джоша Кауфмана</p>
-        <lu class="table_theme_dark table">
-          <li class="table_cell_theme_dark table_cell">
-          <p class="table_heading_theme_dark table_heading">1</p>
-        <p class="table_text_theme_dark table_text">Выберите привлекательный проект.</p>
-        </li>
-        <li class="table_cell_theme_dark table_cell">
-          <p class="table_heading_theme_dark table_heading">2</p>
-          <p class="table_text_theme_dark table_text">Сосредоточьтесь на каком-то одном навыке.</p>
-        </li>
-          <li class="table_cell_theme_dark table_cell">
-            <p class="table_heading_theme_dark table_heading">3</p>
-            <p class="table_text_theme_dark table_text">Определите целевой уровень мастерства.</p>
-          </li>
-            <li class="table_cell_theme_dark table_cell">
-              <p class="table_heading_theme_dark table_heading">4</p>
-              <p class="table_text_theme_dark table_text">Разбейте навык на элементы.</p>
-            </li>
-              <li class="table_cell_theme_dark table_cell">
-                <p class="table_heading_theme_dark table_heading">5</p>
-                <p class="table_text_theme_dark table_text">Приготовьте всё необходимое для занятий.</p>
-              </li>
-                <li class="table_cell_theme_dark table_cell">
-                  <p class="table_heading_theme_dark table_heading">6</p>
-                  <p class="table_text_theme_dark table_text">Устраните препятствия для занятий.</p>
-                </li>
-                  <li class="table_cell_theme_dark table_cell">
-                    <p class="table_heading_theme_dark table_heading">7</p>
-                    <p class="table_text_theme_dark table_text">Выделите специальное время для занятий.</p>
-                  </li>
-                    <li class="table_cell_theme_dark table_cell">
-                      <p class="table_heading_theme_dark table_heading">8</p>
-                      <p class="table_text_theme_dark table_text">Создайте быстрые петли обратной связи.</p>
+            <section class="digits">
+                <h2 class="section-title">Цифры и факты</h2>
+                <p class="section-subtitle">Про учёбу и мозг</p>
+                <ul class="table">
+                    <li class="table__cell">
+                        <h2 class="table__heading">86 миллиардов</h2>
+                        <p class="table__text">Число нейронов в мозге человека</p>
                     </li>
-                      <li class="table_cell_theme_dark table_cell">
-                        <p class="table_heading_theme_dark table_heading">9</p>
-                        <p class="table_text_theme_dark table_text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-                      </li>
-                        <li class="table_cell_theme_dark table_cell">
-                          <p class="table_heading_theme_dark table_heading">10</p>
-                          <p class="table_text_theme_dark table_text">Уделяйте внимание количеству и скорости.</p>
+                    <li class="table__cell">
+                        <h2 class="table__heading">2,1 миллиарда</h2>
+                        <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                        <p class="table__text">Всемирный Банк, 2017</p>
+                    </li>
+                    <li class="table__cell">
+                        <h2 class="table__heading">1000 терабайт</h2>
+                        <p class="table__text">объём памяти человека</p>
+                    </li>
+                    <li class="table__cell">
+                        <h2 class="table__heading">500 триллионов</h2>
+                        <p class="table__text">Число ответственных за обучение нервных синапсисов у взрослого человека</p>
+                    </li>
+                    <li class="table__cell">
+                        <h2 class="table__heading">420 миллионов</h2>
+                        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                        <p class="table__text"> Всемирный банк, 2017</p>
+                    </li>
+                    <li class="table__cell">
+                        <h2 class="table__heading">17-20 лет</h2>
+                        <p class="table__text">Пик обучаемости</p>
+                    </li>
+                    <li class="table__cell">
+                        <h2 class="table__heading">1885 год</h2>
+                        <p class="table__text">Открытие кривой забывания</p>
+                    </li>
+                    <li class="table__cell">
+                        <h2 class="table__heading">1889 год</h2>
+                        <p class="table__text">Открытие условного рефлекса</p>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="feynman">
+                <h3 class="feynman__title">Метод Фейнмана</h3>
+                <p class="feynman__subtitle">Выучить и не забыть.</p>
+                <a href="#" class="feynman__link">Подробнее &rarr;</a>
+            </section>
+            <!-- тут руководствовалась той же логикой: Родитель__элемент_моификатор/ элемент_модификатор. Это вроде как я поняла по БЭМ. Хотя в ревью написано, что тут с классами ок.-->
+            <section class="kaufman">
+                <div class="kaufman__triangle"></div>
+                <h4 class="section-title_theme_dark section-title">Принципы обучения</h4>
+                <p class="section-subtitle_theme_dark section-subtitle">от Джоша Кауфмана</p>
+                <ul class="table_theme_dark table">
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">1</p>
+                        <p class="table__text_theme_dark table__text">Выберите привлекательный проект.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">2</p>
+                        <p class="table__text_theme_dark table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">3</p>
+                        <p class="table__text_theme_dark table__text">Определите целевой уровень мастерства.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">4</p>
+                        <p class="table__text_theme_dark table__text">Разбейте навык на элементы.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">5</p>
+                        <p class="table__text_theme_dark table__text">Приготовьте всё необходимое для занятий.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">6</p>
+                        <p class="table__text_theme_dark table__text">Устраните препятствия для занятий.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">7</p>
+                        <p class="table__text_theme_dark table__text">Выделите специальное время для занятий.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">8</p>
+                        <p class="table__text_theme_dark table__text">Создайте быстрые петли обратной связи.</p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">9</p>
+                        <p class="table__text_theme_dark table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.
+                        </p>
+                    </li>
+                    <li class="table__cell_theme_dark table__cell">
+                        <p class="table__heading_theme_dark table__heading">10</p>
+                        <p class="table__text_theme_dark table__text">Уделяйте внимание количеству и скорости.</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="footer__columns">
+                <div class="footer__column_content_copyright footer__column">
+                    <div class="logo__place_footer logo"></div>
+                    <p class="footer__author"> &COPY; 2020. Екатерина Иванова</p>
+                </div>
+                <nav class="footer__column_content_info footer_column">
+                    <ul class="footer__column-heading">
+                        <li class="footer__column_card">О Практикуме</li>
+                        <li class="footer__column_card">
+                            <a href=" # " class="footer__column-links ">Главная</a>
                         </li>
-                      </ul>       
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="footer_columns">
-          <div class="footer_column_content_copyright footer_column">
-            <div class="logo_place_footer logo"></div>
-            <p class="footer_author"> &COPY; 2020. Екатерина Иванова</p>
-          </div>
-            <nav class="footer_column_content_info footer_column">
-            <ul class="footer_column-heading">О Практикуме
-              <li><a href="#" class="footer_column-links">Главная</a></li>
-              <li><a href="#" class="footer_column-links">Концепция</a></li>
-              <li><a href="#" class="footer_column-links">Наставники</a></li>
-            </ul>
-            </nav>
-              <nav class="footer_column_content_social footer_column">
-              <ul class="footer_column-heading">Соцсети
-                <li>
-                  <a href="#" class="footer_column-links">
-                  <img class="footer_social-icon" src="./images/facebook_color_white.svg" alt="иконка Фейсбука">Facebook</a>
-                </li>
-                <li>
-                  <a href="#" class="footer_column-links">
-                  <img class="footer_social-icon" src="./images/vk_color_white.svg" alt="иконка вконтакте">ВКонтакте</a>
-                </li>
-                <li>
-                  <a href="#" class="footer_column-links">
-                  <img class="footer_social-icon" src="./images/instagram_color_white.svg" alt="иконка инстаграм">Instagram</a>
-                </li>
-              </ul>
-              </nav>
-      </div>
-    </footer>
-  </section>
+                        <li class="footer__column_card">
+                            <a href="# " class="footer__column-links ">Концепция</a>
+                        </li>
+                        <li class="footer__column_card">
+                            <a href="# " class="footer__column-links ">Наставники</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="footer__column_content_social footer_column ">
+                    <ul class="footer__column-heading ">
+                        <li class="footer__column_card">Соцсети</li>
+                        <li class="footer__column_card">
+                            <a href="# " class="footer__column-links ">
+                                <img class="footer__social-icon " src="./images/facebook_color_white.svg " alt="иконка Фейсбука ">Facebook</a>
+                        </li>
+                        <li class="footer__column_card">
+                            <a href="# " class="footer__column-links ">
+                                <img class="footer__social-icon " src="./images/vk_color_white.svg " alt="иконка вконтакте ">ВКонтакте</a>
+                        </li>
+                        <li class="footer__column_card">
+                            <a href="# " class="footer__column-links ">
+                                <img class="footer__social-icon " src="./images/instagram_color_white.svg " alt="иконка инстаграм ">Instagram</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
