--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -17,7 +17,8 @@
         <header class="header">
             <div class="logo logo_place_header"></div>
             <h1 class="header__title">Научиться учиться</h1>
-            <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+            <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
+                своей жизни?
                 <a href="#" class="header__link link"> Узнать &rarr;</a></p>
             <div class="header__main-illustration"></div>
             <div class="header__square-pic rotation"></div>
@@ -27,10 +28,15 @@
                 <div class="two-columns">
                     <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
                     <div class="two-columns__main-text">
-                        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального
+                        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
+                            изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные
+                            задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального
                             знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-                        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-                        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+                        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться
+                            тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+                        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к
+                            обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере
+                            обучения в Практикуме.</p>
                     </div>
                 </div>
             </section>
@@ -41,27 +47,32 @@
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-attention.png" alt="книга в руках">
                         <h3 class="cards__title">Два вида внимания</h3>
-                        <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+                        <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и
+                            рассеянное мышление.</p>
                     </li>
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-recall.png" alt="скульптура задумчивого юноши">
                         <h3 class="cards__title">Recall</h3>
-                        <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+                        <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции
+                            памяти.</p>
                     </li>
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-interliving.png" alt="холл сиднейской оперы">
                         <h3 class="cards__title">Интерливинг</h3>
-                        <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+                        <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.
+                        </p>
                     </li>
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-question.png" alt="одинокий человек в комнате">
                         <h3 class="cards__title">Вопросы</h3>
-                        <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+                        <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас
+                            действительно волнует.</p>
                     </li>
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-competence.png" alt="стопка книг на руке">
                         <h3 class="cards__title">Иллюзия компетентности</h3>
-                        <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+                        <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только
+                            кажется, что вы владеете новой темой.</p>
                     </li>
                 </ul>
             </section>
@@ -70,10 +81,14 @@
                 <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
                 <div class="video__iframes">
                     <div class="video__iframe">
-                    <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                     <div class="video__iframe">
-                    <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -81,7 +96,12 @@
                 <div class="two-columns">
                     <h2 class="two-columns__brief">История Барбары Оакли.</h2>
                     <div class="two-columns__main-text">
-                        <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+                        <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя
+                            законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+                            чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по
+                            службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
+                            Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у
+                            тех, кому всё ясно с первого взгляда.</p>
                     </div>
                 </div>
 
@@ -111,11 +131,13 @@
                     </li>
                     <li class="table__cell">
                         <h2 class="table__heading">500 триллионов</h2>
-                        <p class="table__text">Число ответственных за обучение нервных синапсисов у взрослого человека</p>
+                        <p class="table__text">Число ответственных за обучение нервных синапсисов у взрослого человека
+                        </p>
                     </li>
                     <li class="table__cell">
                         <h2 class="table__heading">420 миллионов</h2>
-                        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для
+                            трудоустройства</p>
                         <p class="table__text"> Всемирный банк, 2017</p>
                     </li>
                     <li class="table__cell">
@@ -136,7 +158,10 @@
                 <div class="khan__container">
                     <h2 class="khan__author">Салман Хан</h2>
                     <h3 class="khan__title">Весь мир — школа</h3>
-                    <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+                    <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+                        по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так
+                        учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и
+                        жизни.</p>
                     <h4 class="khan__quote-author">Джордж Лукас</h4>
                     <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
                     <div class="khan__book-container">
@@ -146,7 +171,7 @@
                 </div>
 
             </section>
-            
+
             <section class="kaufman">
                 <div class="kaufman__triangle rotation"></div>
                 <h3 class="section-title_theme_dark section-title">Принципы обучения</h3>
@@ -186,7 +211,8 @@
                     </li>
                     <li class="table__cell_theme_dark table__cell">
                         <p class="table__heading_theme_dark table__heading">9</p>
-                        <p class="table__text_theme_dark table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.
+                        <p class="table__text_theme_dark table__text">Занимайтесь по расписанию, короткими интенсивными
+                            интервалами.
                         </p>
                     </li>
                     <li class="table__cell_theme_dark table__cell">
@@ -216,7 +242,7 @@
                     <h2 class="footer__column-heading">О Практикуме
                     </h2>
 
-                    <!-- класс footer__card первое, что пришло в голову. Рассматривала эти блоки как некие карточки с ссылками.-->
+                    
                     <ul class="footer__column-links">
                         <li>
                             <a href=" # " class="footer__column-link link">Главная</a>
@@ -234,15 +260,18 @@
                     <ul class="footer__column-links">
                         <li>
                             <a href="# " class="footer__column-link link">
-                                <img class="footer__social-icon " src="./images/facebook_color_white.svg" alt="иконка Фейсбука ">Facebook</a>
+                                <img class="footer__social-icon " src="./images/facebook_color_white.svg"
+                                    alt="иконка Фейсбука ">Facebook</a>
                         </li>
                         <li>
                             <a href="# " class="footer__column-link link">
-                                <img class="footer__social-icon " src="./images/vk_color_white.svg" alt="иконка вконтакте ">ВКонтакте</a>
+                                <img class="footer__social-icon " src="./images/vk_color_white.svg"
+                                    alt="иконка вконтакте ">ВКонтакте</a>
                         </li>
                         <li>
                             <a href="# " class="footer__column-link link">
-                                <img class="footer__social-icon " src="./images/instagram_color_white.svg" alt="иконка инстаграм ">Instagram</a>
+                                <img class="footer__social-icon " src="./images/instagram_color_white.svg"
+                                    alt="иконка инстаграм ">Instagram</a>
                         </li>
                     </ul>
                 </nav>
